--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ input{width:100%;padding:8px;margin:6px 0;border-radius:8px;border:none}
 
   <div class="card" id="adminPanel" style="display:none">
     <h3>Owner Dashboard</h3>
+    <div id="stats"></div>
 
     <table>
       <thead>
